--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 #server.port = 8090
 server.port: 8090
-server.ssl.key-store: keystore.p12
+server.ssl.key-store: classpath:keystore.p12
 #server.ssl.key-store-password: mypassword
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
