--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,7 +8,7 @@ pipeline {
 
         stage('Build'){
             steps {
-              echo 'install clean maven package'  
+              echo 'install clean maven packages'  
               sh 'mvn clean install'  
                 
             }
@@ -17,7 +17,7 @@ pipeline {
 
         post {
             success {
-                echo 'Now Archiving...'
+                echo 'Now Archiving....'
                 sh 'make'
                 archiveArtifacts artifacts: '**/target/*.jar'
             }
