--- a/Kubernetes/Deployment.yaml
+++ b/Kubernetes/Deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: pipeline-hello-world
+  name: pipeline-springboot
   namespace: payments-dev
   labels:
-    app: pipeline-hello-world
+    app: pipeline-springboot
     service: ${ServiceName}    ###ServiceName
     env: nonprod
 spec:
@@ -16,12 +16,12 @@ spec:
       maxUnavailable: 0
   template:
     metadata:
-      name: pipeline-hello-world
+      name: pipeline-springboot
       namespace: ${Kuberntes-NameSpace}     ## Kubernets namespace
       annotations:
         imagelabel: latest
       labels:
-        app: pipeline-hello-world
+        app: pipeline-springboot
         service: ${ServiceName}
         env: nonprod
     spec:
@@ -31,7 +31,7 @@ spec:
             - weight: 5
               podAffinityTerm:
                 namespaces:
-                  - pipeline-hello-world
+                  - pipeline-springboot
                 topologyKey: failure-domain.beta.kubernetes.io/zone
                 labelSelector:
                   matchLabels:
@@ -41,10 +41,11 @@ spec:
       containers:
         - envFrom:
             - configMapRef:
-                name: pipeline-hello-world-nonprod
+                name: pipeline-springboot-nonprod
             - secretRef:
-                name: pipeline-hello-world-nonprod
-          image: <AccountNumber>.dkr.ecr.us-west-2.amazonaws.com/pipeline:latest       #ECS Docker Image repo link
+                name: pipeline-springboot-nonprod
+          #image: <AccountNumber>.dkr.ecr.us-west-2.amazonaws.com/pipeline:latest       #ECS Docker Image repo link
+          image: rahulnallari/microservice-springboot:$BUILD_NUMBER
 ##above image is based on your ECS generated
           imagePullPolicy: Always
           livenessProbe:
@@ -54,20 +55,20 @@ spec:
             successThreshold: 1
             initialDelaySeconds: 15
             timeoutSeconds: 2
-          name: pipeline-hello-world-nonprod
+          name: pipeline-springboot-nonprod
           ports:
             - name: http
               containerPort: 8080
           volumeMounts:
             - name: servicetoken
-              mountPath: /pipeline-hello-world/servicetoken
+              mountPath: /pipeline-springboot/servicetoken
             - name: certificate
-              mountPath: /pipeline-hello-world/certificate
-          workingDir: /pipeline-hello-world
+              mountPath: /pipeline-springboot/certificate
+          workingDir: /pipeline-springboot
       volumes:
         - name: servicetoken
           secret:
-            secretName: pipeline-hello-world jenkins
+            secretName: pipeline-springboot jenkins
         - name: certificate
           secret:
-            secretName: pipeline-hello-world jenkins
+            secretName: pipeline-springboot jenkins
