--- a/Kubernetes/ingress.yaml
+++ b/Kubernetes/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
 
   name: pipeline-springboot
 
-  namespace: ${Kubernetes-NameSpace}     ## Kubernets namespace
+  namespace: payments-dev     ## Kubernets namespace
 
   labels:
 
