--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ steps:
 
     mavenOptions: '-Xmx3072m'
 
-    javaHomeOption: 'JAVA_HOME'
+    javaHomeOption: '/usr/lib/jvm/java-8-openjdk-amd64'
 
     jdkVersionOption: '1.8'
 
