--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,8 @@ steps:
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
-    javaHomeOption: '/usr/lib/jvm/java-11-openjdk-11.0.4.11-0.el8_0.x86_64'
+    javaHomeOption: 'JDKVersion'
+    jdkUserInputPath: '/usr/lib/jvm/java-11-openjdk-11.0.4.11-0.el8_0.x86_64'
     jdkVersionOption: '1.11'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: false
