--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
   inputs:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
-    javaHomeOption: 'JDKVersion, /usr/lib/jvm/java-11-openjdk-11.0.4.11-0.el8_0.x86_64 '
+    javaHomeOption: 'JDKVersion'
     jdkVersionOption: '11.0.4'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: false
