--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,9 +14,9 @@ steps:
     mavenPomFile: 'pom.xml'
     mavenOptions: '-Xmx3072m'
     Set JAVA_HOME by: 'JDK Version'
-    JDK path: '/usr/lib/jvm/java-11-openjdk-11.0.4.11-0.el8_0.x86_64'
+    JDK path: '/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.222.b10-0.el8_0.x86_64'
     #javaHomeOption: 'JDKVersion'
-    JDK Version: 'JDK 11'
+    JDK Version: 'JDK 8'
     #jdkVersionOption: '11.0.4'
     jdkArchitectureOption: 'x64'
     publishJUnitResults: false
