--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ stages:
         #jdkVersionOption: '11.0.4'
         jdkArchitectureOption: 'x64'
         publishJUnitResults: true
-        testResultsFiles: '**/surefire-reports/TEST-*.xml'
+        testResultsFiles: '**/TEST-*.xml'
         goals: 'package'
     - task: CopyFiles@2
       displayName: 'Copy Files to artifact staging directory'
