--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,8 +36,13 @@ stages:
         SourceFolder: '$(System.DefaultWorkingDirectory)'
         Contents: '**/target/*.?(war|jar)'
         TargetFolder: $(Build.ArtifactStagingDirectory)
-    - upload: $(Build.ArtifactStagingDirectory)
-      artifact: drop
+   # - upload: $(Build.ArtifactStagingDirectory)
+  #    artifact: drop
+    - task: PublishBuildArtifact@1
+      displayName: 'Publish Artifact: drop'
+      inputs:
+        PathtoPublish: '$(build.artifactstagingdirectory)'
+      condition: succeededOrFailed()
 
 
 
