--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,5 @@
-trigger:
-- dev
-
 pool: Default
-stages:
-  - build
-  - artifact
-  - deploy
-  
-  - stage: build
-    displayName: "Maven Package"
-    script: 
-      mvn clean install
+
+steps:
+displayName: 'Buils Maven Package'
+- script: mvn clean install
