--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,31 @@
+#pool: Default
+#steps:
+#- script: mvn clean install
+#  displayName: 'Maven Packaging'
+
+#- script: |
+#    echo Add other tasks to build, test, and deploy your project.
+#    echo successfully built
+#  displayName: 'Run a multi-line script'
+
+trigger:
+- dev
+
 pool: Default
-steps:
-- script: mvn clean install
-  displayName: 'Run a one-line script'
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo successfully built
-  displayName: 'Run a multi-line script'
-
+stages: 
+- stage: Build
+  displayName: Build stage
+  jobs:
+  - job: MavenPackageAndPublishArtifacts
+    displayName: Maven Package and Publish Artifacts
+          
+    steps:
+    - script: mvn clean install
+      displayName: 'Maven Package'
+	
+	  - task: PublishBuildArtifacts@1
+	    displayName: 'Publish Artifacts'
+	    inputs:
+	      pathtoPublish: '$(Build.ArtifactStagingDirectory)'
+		    artifactName: 'drop'
