--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,10 +42,10 @@ stages:
         TargetFolder: $(Build.ArtifactStagingDirectory)
     #- upload: $(Build.ArtifactStagingDirectory)
    #   artifact: drop
-    - task: PublishBuildArtifacts@1
+    - task: PublishPipelineArtifact@1
       displayName: 'Publish Artifact'
       inputs:
-        pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
+        path: '$(System.DefaultWorkingDirectory)' 
         artifactName: 'springboot_artifact' 
    
 
