--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # Add steps that build, run tests, deploy, and more:
 
 trigger:
-- dev
+- master
 
 #pool: Default
 
@@ -34,24 +34,25 @@ stages:
         publishJUnitResults: true
         testResultsFiles: '**/surefire-reports/TEST-*.xml'
         goals: 'package'
-    - task: CopyFiles@2
-      displayName: 'Copy Files to artifact staging directory'
-      inputs:
-        SourceFolder: '$(System.DefaultWorkingDirectory)'
-        Contents: '**/target/*.?(war|jar)'
-        TargetFolder: $(Build.ArtifactStagingDirectory)
+ #   - task: CopyFiles@2
+ #     displayName: 'Copy Files to artifact staging directory'
+ #     inputs:
+ #       SourceFolder: '$(System.DefaultWorkingDirectory)'
+ #       Contents: '**/target/*.?(war|jar)'
+ #       TargetFolder: $(Build.ArtifactStagingDirectory)
     #- upload: $(Build.ArtifactStagingDirectory)
    #   artifact: drop
-    - task: PublishPipelineArtifact@1
+    - task: PublishPipelineArtifact@0
       displayName: 'Publish Artifact'
       inputs:
-        path: '$(System.DefaultWorkingDirectory)' 
         artifactName: 'springboot_artifact' 
-    - task: DownloadPipelineArtifact@2
+        targetPath: '$(System.DefaultWorkingDirectory)'
+    - task: DownloadPipelineArtifact@0
       inputs:
-        artifact: springboot_artifact
-        patterns: '**/target/*.?(war|jar)'
-        path: $(Build.SourcesDirectory)
+        artifactName: springboot_artifact
+       # patterns: '**/target/*.?(war|jar)'
+        targetPath: $(Build.SourcesDirectory)
+      continueOnError: true
    
 
 
