--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,10 +5,10 @@
 trigger:
 - master
 
-#pool: Default
+pool: Default
 
-pool: 
-  vmImage: 'ubuntu-latest'
+#pool: 
+#  vmImage: 'ubuntu-latest'
 
 
 stages: 
