--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ stages:
         javaHomeOption: 'JDKVersion'
        # JDK Version: 'JDK 8'
         jdkVersionOption: '1.8'
-        jdkArchitectureOption: 'x64'
+       # jdkArchitectureOption: 'x64'
         publishJUnitResults: true
         testResultsFiles: '**/surefire-reports/TEST-*.xml'
         goals: 'package'
