--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,8 +28,8 @@ stages:
         Set JAVA_HOME by: 'JDK Version'
         JDK path: '/usr/lib/jvm/java-1.8.0-openjdk-1.8.0.222.b10-0.el8_0.x86_64'
        # javaHomeOption: 'JDKVersion'
-       # JDK Version: 'JDK 8'
-        jdkVersionOption: '1.8'
+        JDK Version: 'JDK 1.8'
+      #  jdkVersionOption: '1.8'
        # jdkArchitectureOption: 'x64'
         publishJUnitResults: true
         testResultsFiles: '**/surefire-reports/TEST-*.xml'
