--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,9 +57,8 @@ stages:
       displayName: 'Deployment'
       inputs:
         sshEndpoint: rahulssh
-        script: |
-          which java
-   
+        script: echo $JAVA_HOME
+          
 
 
 
