--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,6 +65,7 @@ stages:
         sshEndpoint: rahulssh
         script: azure_shell/dep.sh
         scriptPath: /home/ubuntu
+        command: /home/ubuntu/dep.sh
           
         
           
