--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ stages:
         sshEndpoint: rahulssh
         script: azure_shell/dep.sh
         scriptPath: /home/ubuntu
-        command: /home/ubuntu/dep.sh
+        commands: /home/ubuntu/dep.sh
           
         
           
