--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,21 +58,21 @@ stages:
  #     continueOnError: true
  #   - script: |
  #       echo $JAVA_HOME
-    - task: CopyFilesOverSSH@0
-      displayName: 'Securely copy files to the remote machine'
-      inputs:
-        sshEndpoint: rahulssh
-        sourceFolder: '$(System.DefaultWorkingDirectory)'
-        content: '**SNAPSHOT.jar'
-        targetFolder: /home/ubuntu 
+ #   - task: CopyFilesOverSSH@0
+ #     displayName: 'Securely copy files to the remote machine'
+ #     inputs:
+ #       sshEndpoint: rahulssh
+ #       sourceFolder: '$(System.DefaultWorkingDirectory)'
+ #       content: '**SNAPSHOT.jar'
+ #       targetFolder: /home/ubuntu 
       
-    - task: SSH@0
-      displayName: 'Deployment'
-      inputs:
-        sshEndpoint: rahulssh
+ #   - task: SSH@0
+ #     displayName: 'Deployment'
+ #     inputs:
+ #       sshEndpoint: rahulssh
   #      script: azure_shell/dep.sh
   #      scriptPath: /home/ubuntu/
-        commands: ls -lrt /home/ubuntu
+  #      commands: ls -lrt /home/ubuntu
           
         
           
